--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -12,6 +10,34 @@ body {
   }
 }
 
+@theme {
+  --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-card: var(--card);
+    --color-card-foreground: var(--card-foreground);
+    --color-popover: var(--popover);
+    --color-popover-foreground: var(--popover-foreground);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
+    --color-secondary: var(--secondary);
+    --color-secondary-foreground: var(--secondary-foreground);
+    --color-muted: var(--muted);
+    --color-muted-foreground: var(--muted-foreground);
+    --color-accent: var(--accent);
+    --color-accent-foreground: var(--accent-foreground);
+    --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
+    --color-border: var(--border);
+    --color-input: var(--input);
+    --color-ring: var(--ring);
+    --color-chart-1: var(--chart-1);
+    --color-chart-2: var(--chart-2);
+    --color-chart-3: var(--chart-3);
+    --color-chart-4: var(--chart-4);
+    --color-chart-5: var(--chart-5);
+    --color-radius: 0.5rem;
+}
+
 @layer base {
   :root {
     --background: #f5f5f5;
@@ -20,12 +46,12 @@ body {
     --card-foreground: #030307;
     --popover: #f2f2f2;
     --popover-foreground: #030307;
-    --primary: #865CBD;
+    --primary: #865cbd;
     --primary-foreground: #f2f2f2;
     --secondary: #64748b;
     --secondary-foreground: #0a64ea;
-    --muted: #A1B9DD;
-    --muted-foreground: #1B222E;
+    --muted: #a1b9dd;
+    --muted-foreground: #1b222e;
     --accent: #64748b;
     --accent-foreground: #0a64ea;
     --destructive: #dc2626;
@@ -48,11 +74,11 @@ body {
     --popover: #030307;
     --popover-foreground: #f2f2f2;
     --primary: #f2f2f2;
-    --primary-foreground: #B17AF9;
+    --primary-foreground: #b17af9;
     --secondary: #2d3748;
     --secondary-foreground: #f2f2f2;
-    --muted: #1B222E;
-    --muted-foreground: #A1B9DD;
+    --muted: #1b222e;
+    --muted-foreground: #a1b9dd;
     --accent: #2d3748;
     --accent-foreground: #ddd;
     --destructive: #b91c1c;
@@ -70,13 +96,4 @@ body {
 
 * {
   scroll-behavior: smooth;
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
 }
