style: accessibility adjusts

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,31 +12,33 @@ body {
 
 @theme {
   --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --color-card: var(--card);
-    --color-card-foreground: var(--card-foreground);
-    --color-popover: var(--popover);
-    --color-popover-foreground: var(--popover-foreground);
-    --color-primary: var(--primary);
-    --color-primary-foreground: var(--primary-foreground);
-    --color-secondary: var(--secondary);
-    --color-secondary-foreground: var(--secondary-foreground);
-    --color-muted: var(--muted);
-    --color-muted-foreground: var(--muted-foreground);
-    --color-accent: var(--accent);
-    --color-accent-foreground: var(--accent-foreground);
-    --color-destructive: var(--destructive);
-    --color-destructive-foreground: var(--destructive-foreground);
-    --color-border: var(--border);
-    --color-input: var(--input);
-    --color-ring: var(--ring);
-    --color-chart-1: var(--chart-1);
-    --color-chart-2: var(--chart-2);
-    --color-chart-3: var(--chart-3);
-    --color-chart-4: var(--chart-4);
-    --color-chart-5: var(--chart-5);
-    --color-radius: 0.5rem;
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-radius: 0.5rem;
 }
+
+/* Accessibility correction */
 
 @layer base {
   :root {
@@ -50,7 +52,7 @@ body {
     --primary-foreground: #f2f2f2;
     --secondary: #64748b;
     --secondary-foreground: #0a64ea;
-    --muted: #a1b9dd;
+    --muted: #b6d1f9;
     --muted-foreground: #1b222e;
     --accent: #64748b;
     --accent-foreground: #0a64ea;
@@ -78,7 +80,7 @@ body {
     --secondary: #2d3748;
     --secondary-foreground: #f2f2f2;
     --muted: #1b222e;
-    --muted-foreground: #a1b9dd;
+    --muted-foreground: #b6d1f9;
     --accent: #2d3748;
     --accent-foreground: #ddd;
     --destructive: #b91c1c;
